--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 * {
   margin: 0px;
 }
+
+.container {
+  background-color: rgba(73, 73, 141, 0.411);
+  height: 500px;
+  width: 500px;
+}
+
+.child {
+  background-color: red;
+  height: 200px;
+  width: 200px;
+}
