--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 * {
   margin: 0px;
+ 
+}
+
+.page {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
+  margin: 30px;
   background-color: rgba(73, 73, 141, 0.411);
   height: 500px;
   width: 500px;
@@ -12,4 +22,15 @@
   background-color: red;
   height: 200px;
   width: 200px;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transition-delay: 0.5s;
+}
+
+.child:hover {
+  background-color: rebeccapurple;
+  transform: rotate(-195deg) scale(1.5);
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transition-delay: 0.5s;
 }
